--- a/web_ui/package.json
+++ b/web_ui/package.json
@@ -16,6 +16,7 @@
     "use-force-update": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
