--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ strum = "0.19"
 strum_macros = "0.19"
 parking_lot = "0.11"
 structout = { path = "../structout" }
+endpoint_actor = { path = "./macros/endpoint_actor" }
