--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -27,7 +27,7 @@ strum = "0.19"
 strum_macros = "0.19"
 endpoint_actor = { path = "../endpoint_actor" }
 actor_response_handler = { path = "../actor_response_handler" }
-resource_messaging = { path = "../resource_messaging" }
+actor_msg_resources = { path = "../actor_msg_resources" }
 entities = { path = "../entities" }
 
 [dev-dependencies]
