--- a/web_ui/package.json
+++ b/web_ui/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.0",
     "@reduxjs/toolkit": "^1.4.0",
     "connected-react-router": "^6.8.0",
+    "http-status-codes": "^2.1.4",
     "lodash-es": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
