--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+percent-encoding = "2.1"
 once_cell = "1.4"
 flexi_logger = "0.16"
 log = "0.4"
