implement front-end integration test for borrowing flow

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,5 +20,7 @@ repos:
         language: node
         files: ^web_ui\/.*\.(jsx?|html|json)$
         args: [
-          '--check'
+          '--check',
+          '--ignore-path',
+          './web_ui/.prettierignore'
         ]
