improve infrastructure for UI integration testing

--- a/web_ui/integration/package.json
+++ b/web_ui/integration/package.json
@@ -9,8 +9,12 @@
   "dependencies": {
     "@cypress/webpack-preprocessor": "5.4.8",
     "cypress": "5.4.0",
+    "sleep": "^6.3.0",
     "ts-loader": "8.0.7",
     "typescript": "4.0.3",
     "webpack": "5.2.0"
+  },
+  "devDependencies": {
+    "cypress-select-tests": "^1.5.8"
   }
 }
