--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -26,7 +26,7 @@ parking_lot = "0.11"
 strum = "0.19"
 strum_macros = "0.19"
 endpoint_actor = { path = "../endpoint_actor" }
-actor_response_handler = { path = "../actor_response_handler" }
+actor_request_handler = { path = "../actor_request_handler" }
 actor_msg_resources = { path = "../actor_msg_resources" }
 entities = { path = "../entities" }
 
