--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,11 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 once_cell = "1.4"
 
+sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-async-std", "postgres", "any", "migrate"]}
+refinery = { version = "0.4", features = ["postgres"]}
+refinery-core = { version = "0.4", features = ["postgres"]}
+
 async-std = { version = "1.6", features = ["attributes", "unstable"] }
-sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-async-std", "postgres" ]}
 tide = "0.13"
 bastion = "0.4"
 crossbeam-channel = "0.5"
