--- a/web_ui/package.json
+++ b/web_ui/package.json
@@ -8,6 +8,7 @@
     "connected-react-router": "^6.8.0",
     "http-status-codes": "^2.1.4",
     "lodash-es": "^4.17.15",
+    "notistack": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-id-generator": "^3.0.1",
