--- a/web_ui/integration/package.json
+++ b/web_ui/integration/package.json
@@ -4,17 +4,16 @@
     "start": "cypress open",
     "test": "cypress run"
   },
-  "author": "bas@basarat.com",
+  "author": "resolritter",
   "license": "MIT",
   "dependencies": {
     "@cypress/webpack-preprocessor": "5.4.8",
+    "chokidar": "^3.4.3",
     "cypress": "5.4.0",
-    "sleep": "^6.3.0",
+    "tempy": "^1.0.0",
     "ts-loader": "8.0.7",
     "typescript": "4.0.3",
     "webpack": "5.2.0"
   },
-  "devDependencies": {
-    "cypress-select-tests": "^1.5.8"
-  }
+  "devDependencies": {}
 }
