--- a/web_ui/package.json
+++ b/web_ui/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "redux": "^4.0.5",
+    "serialize-javascript": "^5.0.1",
     "use-force-update": "^1.0.7"
   },
   "devDependencies": {
