--- a/web_ui/package.json
+++ b/web_ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@reduxjs/toolkit": "^1.4.0",
     "connected-react-router": "^6.8.0",
     "lodash-es": "^4.17.15",
