--- a/entities/Cargo.toml
+++ b/entities/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["resolritter <resolritter@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
-structout = { path = "../../structout" }
+structout = "0.6"
 surf = "2.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
