--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,4 @@ crossbeam-channel = "0.5"
 strum = "0.19"
 strum_macros = "0.19"
 parking_lot = "0.11"
-structout = "0.1.2"
+structout = { path = "../structout" }
