--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -24,10 +24,10 @@ parking_lot = "0.11"
 
 strum = "0.19"
 strum_macros = "0.19"
-structout = { path = "../../structout" }
 endpoint_actor = { path = "../macros/endpoint_actor" }
 actor_response_handler = { path = "../macros/actor_response_handler" }
 resource_messaging = { path = "../macros/resource_messaging" }
+entities = { path = "../entities" }
 
 [dev-dependencies]
 surf = "2.0"
