--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 once_cell = "1.4"
+flexi_logger = "0.16"
+log = "0.4"
 
 sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-async-std", "postgres", "any", "migrate"]}
 refinery = { version = "0.4", features = ["postgres"]}
