--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - '${DB_DIR}:/bitnami/postgresql'
+      - '${APP_DB_DIR}:/bitnami/postgresql'
     environment:
       - 'ALLOW_EMPTY_PASSWORD=yes'
 
