--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "library_management"
+name = "library"
 version = "0.1.0"
 authors = ["resolritter <joao.paulo.silvasouza@hotmail.com>"]
 edition = "2018"
@@ -9,3 +9,9 @@ sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runti
 bastion = "0.4"
 strum = "0.19"
 strum_macros = "0.19"
+crossbeam-channel = "0.5"
+async-std = { version = "1.6", features = ["attributes", "unstable"] }
+tide = "0.13"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+once_cell = "1.4"
