--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,9 @@ parking_lot = "0.11"
 structout = { path = "../structout" }
 endpoint_actor = { path = "./macros/endpoint_actor" }
 respond_with_actor = { path = "./macros/respond_with_actor" }
+
+[dev-dependencies]
+async-process = "1.0"
+futures-lite = "1.11"
+surf = "2.0"
+tempdir = "0.3"
