--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ serde_json = "1"
 once_cell = "1.4"
 flexi_logger = "0.16"
 log = "0.4"
+clap = "3.0.0-beta.2"
 
 sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-async-std", "postgres", "any", "migrate"]}
 refinery = { version = "0.4", features = ["postgres"]}
@@ -19,16 +20,16 @@ async-std = { version = "1.6", features = ["attributes", "unstable"] }
 tide = "0.13"
 bastion = "0.4"
 crossbeam-channel = "0.5"
+parking_lot = "0.11"
 
 strum = "0.19"
 strum_macros = "0.19"
-parking_lot = "0.11"
 structout = { path = "../structout" }
 endpoint_actor = { path = "./macros/endpoint_actor" }
 respond_with_actor = { path = "./macros/respond_with_actor" }
 
 [dev-dependencies]
-async-process = "1.0"
-futures-lite = "1.11"
 surf = "2.0"
-tempdir = "0.3"
+stdext = "0.2"
+test_utils = { path = "./test_utils" }
+insta = "1.1"
